deploy/internal/auth/pocketid/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pocket-id
  namespace: pocket-id
  labels:
    app: pocket-id
spec:
  serviceName: pocket-id
  replicas: 1
  selector:
    matchLabels:
      app: pocket-id
  template:
    metadata:
      labels:
        app: pocket-id
    spec:
      containers:
        - name: pocket-id
          image: ghcr.io/pocket-id/pocket-id:v2
          resources:
            requests:
              cpu: 10m
              memory: 48Mi
            limits:
              memory: 128Mi
          ports:
            - containerPort: 1411
              name: http
          volumeMounts:
            - name: data
              mountPath: /app/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "lvm-data"
        resources:
          requests:
            storage: 128Mi
