deploy/internal/auth/pocketid/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pocket-id
  namespace: pocket-id
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: https://auth.internal.ticklethepanda.co.uk
    gethomepage.dev/name: Pocket ID
    gethomepage.dev/group: IAM
    gethomepage.dev/icon: pocket-id
    gethomepage.dev/description: OIDC provider
    gethomepage.dev/pod-selector: app=pocket-id
spec:
  entryPoints:
    - int-web-secure
  tls: {}
  routes:
    - kind: Rule
      match: Host(`auth.internal.ticklethepanda.co.uk`)
      services:
        - name: pocket-id
          port: 80
